# crewai

./: .gitignore
statusreportscrew/: .env copy  README.md  pyproject.toml  report.md  stock_report.md  todo.txt
statusreportscrew/src/statusreportscrew/: crew.py  hr_crew.py  main.py  my_flow.py  rpt.txt  stock_flow.py  utils.py
statusreportscrew/src/statusreportscrew/config/: agents.yaml  hr_agents.yaml  hr_tasks.yaml  tasks.yaml
statusreportscrew/src/statusreportscrew/tools/: vacation_tool.py
