[project]
name = "statusreportscrew"
version = "0.1.0"
description = "statusReportsCrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
statusreportscrew = "statusreportscrew.main:run"
run_crew = "statusreportscrew.main:run"
train = "statusreportscrew.main:train"
replay = "statusreportscrew.main:replay"
test = "statusreportscrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
